# Zerith

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build_installer.bat  build_installer.sh  compile_shaders.bat  main.cpp  resources.rc
assets/: oak_stairs.json
assets/zerith/lang/: en_us.json
assets/zerith/models/block/: bricks.json  crafting_table.json  dirt.json  glass.json  oak_leaves.json  oak_log.json  oak_planks.json  oak_slab.json  stone.json  water.json
dep/: BlockGeometry.hpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  CubeGeometry.hpp
examples/: coordinate_conversion_example.cpp
include/: aabb.h  async_gpu_uploader.h  binary_chunk_data.h  binary_mesh_converter.h  block_face_bounds.h  block_properties.h  block_registry.h  block_types.h  blockbench_face_extractor.h  blockbench_instance_generator.h  blockbench_instance_wrapper.h  blockbench_model.h  blockbench_parser.h  blocks.h  chunk.h  chunk_manager.h  chunk_mesh_generator.h  chunk_octree.h  coordinate_conversion.h  extended_chunk_data.h  face_instance.h  face_instance_pool.h  face_visibility_mask.h  face_visibility_mask_generator.h  imgui_integration.h  indirect_draw.h  logger.h  model_loader.h  object_pool.h  octree.h  player.h  profiler.h  raycast.h  sparse_octree.h  terrain_generator.h  texture_array.h  texture_atlas.h  thread_pool.h  translation_manager.h  voxel_ao.h  (+1 more)
include/blocks/: block_behavior.h  fluid_block.h  water_block.h
resources/: resources.rc  stairs.json  zerith.desktop
resources/models/: 1x1x1.json  cube_all.json
shaders/: aabb_fragment_shader.glsl  aabb_mesh_shader.glsl  composition_fragment_shader.glsl  debug.frag  debug.shader.frag  debug.vert  fragment_shader.glsl  geometry_fragment_shader.glsl  geometry_mesh_shader.glsl  gui_fragment_shader.glsl  gui_vertex_shader.glsl  lines.frag  lines.vert  mesh_shader.glsl  shader.frag  shader.vert  sky.frag  sky.vert  ssao_blur_fragment_shader.glsl  ssao_fragment_shader.glsl  ssao_vertex_shader.glsl  task_shader.glsl  triangle.frag  triangle.vert  vertex_shader.glsl
src/: AABB.hpp  Application.cpp  Application.hpp  Block.cpp  Block.hpp  BlockGeometry.hpp  BlockType.hpp  Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkPos.hpp  ChunkStorage.hpp  CubeGeometry.hpp  DebugRenderer.cpp  DebugRenderer.hpp  InputManager.cpp  InputManager.hpp  Logger.cpp  Logger.hpp  ModelLoader.cpp  ModelLoader.hpp  PerlinNoise.hpp  Player.hpp  Quad.hpp  QuadInstance.hpp  ShaderManager.cpp  ShaderManager.hpp  Subchunk.hpp  TextureLoader.cpp  TextureLoader.hpp  Vertex.hpp  VulkanApp.cpp  VulkanApp.hpp  Window.cpp  Window.hpp  aabb.cpp  async_gpu_uploader.cpp  binary_chunk_data.cpp  binary_mesh_converter.cpp  (+19 more)
src/blocks/: BlockModel.h  BlockType.h  TextureManager.h  block_behavior.cpp  block_properties.cpp  block_types.cpp  blocks.cpp  fluid_block.cpp  water_block.cpp
src/core/: ThreadPool.cpp  ThreadPool.hpp  TimeManager.cpp  TimeManager.hpp  TimeProfiler.cpp  TimeProfiler.hpp  VulkanApp.cpp  VulkanApp.hpp  player.cpp  raycast.cpp  windows_wrapper.hpp
src/gui/: GUIRenderer.h
src/rendering/: ModelLoader.cpp  ModelLoader.hpp  TextureLoader.cpp  chunk_mesh_generator.cpp  face_visibility_mask_generator.cpp  indirect_draw.cpp  ssao.cpp  ssao.h  voxel_ao.cpp
src/serialization/: binary_chunk_data.cpp  binary_mesh_converter.cpp
src/ui/: imgui_integration.cpp
src/utils/: logger.cpp  translation_manager.cpp
src/world/:  World.h  Block.cpp  Block.hpp  BlockState.cpp  BlockState.hpp  BlockStateLoader.cpp  BlockStateLoader.hpp  Blocks.cpp  Blocks.hpp  BlocksWithStates.cpp  BlocksWithStates.hpp  Chunk.cpp  Chunk.h  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  chunk.cpp  chunk_manager.cpp  extended_chunk_data.cpp  terrain_generator.cpp
test/: test_binary_meshing.cpp
